samples/_failures_safe/1761657058_1326a1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_13587b43.c: In function ‘main’:
./samples/SAFE/__tmp_13587b43.c:160: error: expected ‘]’ at end of input
./samples/SAFE/__tmp_13587b43.c:159:9: error: expected declaration or statement at end of input
  159 |         char command[MAX_INPUT_LEN
      |         ^~~~
./samples/SAFE/__tmp_13587b43.c:159:9: error: expected declaration or statement at end of input
